--- a/assets/css/bootstrap/_buttons.scss
+++ b/assets/css/bootstrap/_buttons.scss
@@ -7,6 +7,10 @@
 // --------------------------------------------------
 
 .btn {
+  font-family: $font-family-sans-serif-alt;
+  font-weight: 700; 
+  letter-spacing: 2px;
+  background-color: #fff;
   display: inline-block;
   margin-bottom: 0; // For input.btn
   font-weight: $btn-font-weight;
@@ -15,9 +19,9 @@
   touch-action: manipulation;
   cursor: pointer;
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
-  border: 1px solid transparent;
+  border: 2px solid $gray-dark;
   white-space: nowrap;
-  @include button-size($padding-base-vertical, $padding-base-horizontal, $font-size-base, $line-height-base, $border-radius-base);
+  @include button-size($padding-base-vertical, $padding-base-horizontal, $font-size-base, $line-height-base, $border-radius-none);
   @include user-select(none);
 
   &,
@@ -34,6 +38,8 @@
   &.focus {
     color: $btn-default-color;
     text-decoration: none;
+    background-color: $gray-dark;
+    color: #fff;
   }
 
   &:active,
@@ -51,33 +57,6 @@
     @include opacity(.65);
     @include box-shadow(none);
   }
-}
-
-
-// Alternate buttons
-// --------------------------------------------------
-
-.btn-default {
-  @include button-variant($btn-default-color, $btn-default-bg, $btn-default-border);
-}
-.btn-primary {
-  @include button-variant($btn-primary-color, $btn-primary-bg, $btn-primary-border);
-}
-// Success appears as green
-.btn-success {
-  @include button-variant($btn-success-color, $btn-success-bg, $btn-success-border);
-}
-// Info appears as blue-green
-.btn-info {
-  @include button-variant($btn-info-color, $btn-info-bg, $btn-info-border);
-}
-// Warning appears as orange
-.btn-warning {
-  @include button-variant($btn-warning-color, $btn-warning-bg, $btn-warning-border);
-}
-// Danger and error appear as red
-.btn-danger {
-  @include button-variant($btn-danger-color, $btn-danger-bg, $btn-danger-border);
 }
 
 
