--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -281,10 +281,10 @@ textarea {
   line-height: inherit; }
 
 a {
-  color: #337ab7;
+  color: #333333;
   text-decoration: none; }
   a:hover, a:focus {
-    color: #23527c;
+    color: #0d0d0d;
     text-decoration: underline; }
   a:focus {
     outline: thin dotted;
@@ -646,6 +646,99 @@ address {
   font-style: normal;
   line-height: 1.42857; }
 
+.btn {
+  font-family: "Exo 2", sans-serif;
+  font-weight: 700;
+  letter-spacing: 2px;
+  background-color: #fff;
+  display: inline-block;
+  margin-bottom: 0;
+  font-weight: normal;
+  text-align: center;
+  vertical-align: middle;
+  touch-action: manipulation;
+  cursor: pointer;
+  background-image: none;
+  border: 2px solid #333333;
+  white-space: nowrap;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857;
+  border-radius: 0px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+  .btn:focus, .btn.focus, .btn:active:focus, .btn:active.focus, .btn.active:focus, .btn.active.focus {
+    outline: thin dotted;
+    outline: 5px auto -webkit-focus-ring-color;
+    outline-offset: -2px; }
+  .btn:hover, .btn:focus, .btn.focus {
+    color: #333333;
+    text-decoration: none;
+    background-color: #333333;
+    color: #fff; }
+  .btn:active, .btn.active {
+    outline: 0;
+    background-image: none;
+    -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125); }
+  .btn.disabled, .btn[disabled], fieldset[disabled] .btn {
+    cursor: not-allowed;
+    pointer-events: none;
+    opacity: 0.65;
+    filter: alpha(opacity=65);
+    -webkit-box-shadow: none;
+    box-shadow: none; }
+
+.btn-link {
+  color: #333333;
+  font-weight: normal;
+  border-radius: 0; }
+  .btn-link, .btn-link:active, .btn-link.active, .btn-link[disabled], fieldset[disabled] .btn-link {
+    background-color: transparent;
+    -webkit-box-shadow: none;
+    box-shadow: none; }
+  .btn-link, .btn-link:hover, .btn-link:focus, .btn-link:active {
+    border-color: transparent; }
+  .btn-link:hover, .btn-link:focus {
+    color: #0d0d0d;
+    text-decoration: underline;
+    background-color: transparent; }
+  .btn-link[disabled]:hover, .btn-link[disabled]:focus, fieldset[disabled] .btn-link:hover, fieldset[disabled] .btn-link:focus {
+    color: #777777;
+    text-decoration: none; }
+
+.btn-lg {
+  padding: 10px 16px;
+  font-size: 18px;
+  line-height: 1.33;
+  border-radius: 6px; }
+
+.btn-sm {
+  padding: 5px 10px;
+  font-size: 12px;
+  line-height: 1.5;
+  border-radius: 3px; }
+
+.btn-xs {
+  padding: 1px 5px;
+  font-size: 12px;
+  line-height: 1.5;
+  border-radius: 3px; }
+
+.btn-block {
+  display: block;
+  width: 100%; }
+
+.btn-block + .btn-block {
+  margin-top: 5px; }
+
+input[type="submit"].btn-block,
+input[type="reset"].btn-block,
+input[type="button"].btn-block {
+  width: 100%; }
+
 html, body {
   height: 100%; }
 
@@ -671,28 +764,100 @@ section {
 
 .row {
   margin-left: -15px;
-  margin-right: -15px; }
+  margin-right: -15px;
+  height: 100%; }
   .row:before, .row:after {
     content: " ";
     display: table; }
   .row:after {
     clear: both; }
 
-.intro {
-  height: 100%;
-  background-color: red; }
+.intro, .intro .row {
+  height: 100%; }
 
 .intro-text, .intro-photo {
   position: relative;
   min-height: 1px;
   padding-left: 15px;
-  padding-right: 15px; }
+  padding-right: 15px;
+  position: relative;
+  height: 100%; }
   @media (min-width: 768px) {
     .intro-text, .intro-photo {
       float: left;
       width: 50%; } }
 
-.text-alt {
+.mid-box {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%); }
+
+.intro-photo {
+  background-image: url("http://placekitten.com/g/900/600");
+  background-size: cover;
+  background-position: center center;
+  height: 100%; }
+
+.portfolio {
+  padding-top: 12%;
+  padding-bottom: 12%;
+  height: 76%;
+  text-align: right; }
+  .portfolio .description {
+    position: relative;
+    min-height: 1px;
+    padding-left: 15px;
+    padding-right: 15px; }
+    @media (min-width: 768px) {
+      .portfolio .description {
+        float: left;
+        width: 25%; } }
+  .portfolio .screenshot {
+    position: relative;
+    min-height: 1px;
+    padding-left: 15px;
+    padding-right: 15px;
+    height: 100%; }
+    @media (min-width: 768px) {
+      .portfolio .screenshot {
+        margin-left: 8.33333%; } }
+    @media (min-width: 768px) {
+      .portfolio .screenshot {
+        float: left;
+        width: 66.66667%; } }
+
+.box-169, .box-43 {
+  position: relative;
+  width: 100%;
+  /* desired width */
+  overflow: hidden; }
+
+.box-169:before {
+  content: "";
+  display: block;
+  padding-top: 56.25%; }
+
+.box-43:before {
+  content: "";
+  display: block;
+  padding-top: 75%; }
+
+.content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-size: cover;
+  background-position: 50%; }
+
+#first-portfolio-item {
+  background-image: url("http://placekitten.com/g/900/600");
+  background-size: cover;
+  background-position: center center;
+  height: 100%; }
+
+.text-alt, h1, h2, h3, h4, h5, h6 {
   font-family: "Exo 2", sans-serif;
   font-weight: 700; }
 
