--- a/assets/css/_my-style.scss
+++ b/assets/css/_my-style.scss
@@ -1,4 +1,4 @@
-html, body {
+html, body, section, .row {
 	height: 100%;
 }
 
@@ -16,16 +16,12 @@ section {
 	}
 }
 
-.row {
+.row{
 	@include make-row();
-	height: 100%;
 }
 
 //Intro
 
-.intro, .intro .row {
-	height: 100%;
-}
 .intro-text, .intro-photo{
 	@include make-sm-column(6);
 	position: relative;
@@ -47,21 +43,49 @@ section {
 //Portfolio
 
 .portfolio {
-	padding-top: 12%;
-	padding-bottom: 12%;
-	height: 76%;
+	padding-top: 9em;
+	padding-bottom: 0em;
 	text-align: right;
 	.description {
 		@include make-sm-column(3);
+		// height: 100%;
 	}
 	.screenshot {
 		@include make-sm-column-offset(1);
 		@include make-sm-column(8);
-		height: 100%;
+		// height: 100%;
 	}
 }
 
 //Aspect ratio boxes
+
+.box-header {
+	height: 2em;
+	border-top-left-radius: .5em;
+	border-top-right-radius: .5em;
+	background-color: #555;
+	opacity: .8;
+	background-color: hsla(0,0,33,.8);
+	.tiny {
+		height: .6em;
+		width: .6em;
+		border-radius: .6em;
+		background-color: red;
+		position: absolute;
+		top: .7em;		
+	}
+	.circle1 {
+		left: 1.6em;
+	}
+	.circle2 {
+		left: 2.6em;
+	}
+	.circle3 {
+		left: 3.6em;
+	}
+}
+
+
 
 .box-169, .box-43 {
 	position: relative;
@@ -102,3 +126,42 @@ section {
 	background-position: center center;
 	height: 100%;	
 }
+#second-portfolio-item {
+	background-image: url('http://placekitten.com/g/900/900');
+	background-size: cover;
+	background-position: center center;
+	height: 100%;	
+}
+
+//Every section id has its own "theme" colour
+
+#samanu-sofute {
+	$sam-sof-col: #e74c3c; 	
+	background: $sam-sof-col;
+		.btn {
+			&:hover,
+			&:focus,
+			&.focus{
+				color: $sam-sof-col;
+		  }
+		}
+		.tiny {
+			background-color: $sam-sof-col!important;
+		}
+} 
+
+#uzuovejos {
+	$uzuovejos-col: #1abc9c; 	
+	background: $uzuovejos-col;
+		.btn {
+			&:hover,
+			&:focus,
+			&.focus{
+				color: $uzuovejos-col;
+		  }
+		}
+		.tiny {
+			background-color: $uzuovejos-col!important;
+		}
+} 
+  
