--- a/assets/css/bootstrap/_buttons.scss
+++ b/assets/css/bootstrap/_buttons.scss
@@ -10,7 +10,8 @@
   font-family: $font-family-sans-serif-alt;
   font-weight: 700; 
   letter-spacing: 2px;
-  background-color: #fff;
+  background-color: transparent;
+  text-transform: uppercase;
   display: inline-block;
   margin-bottom: 0; // For input.btn
   font-weight: $btn-font-weight;
