--- a/assets/css/_my-style.scss
+++ b/assets/css/_my-style.scss
@@ -61,17 +61,17 @@ section {
 	text-align: right;
 	.description {
 		@include make-sm-column(3);
-	@media (max-width: $screen-md-min) {
+	@media (max-width: $screen-sm-min) {
 		padding-bottom: 3em;
+		text-align: center;
 	}
-
-	}
+}
 	.screenshot {
 		@include make-sm-column-offset(1);
 		@include make-sm-column(8);
-		// height: 100%;
 	}
 }
+
 
 //Aspect ratio boxes
 
@@ -108,7 +108,10 @@ section {
 	width: 100%;		/* desired width */
 	overflow: hidden;
 	border-bottom-left-radius: .5em;
-	border-bottom-right-radius: .5em;	
+	border-bottom-right-radius: .5em;
+		-webkit-box-shadow: 0px 2px 12px -2px rgba(0,0,0,0.75);
+		-moz-box-shadow: 0px 2px 12px -2px rgba(0,0,0,0.75);
+		box-shadow: 0px 2px 12px -2px rgba(0,0,0,0.75);
 }
 .box-169:before{
 	content: "";
@@ -139,13 +142,11 @@ section {
 }
 
 #first-portfolio-item {
-	background-image: url('http://placekitten.com/g/900/600');
 	background-size: cover;
 	background-position: center center;
 	height: 100%;	
 }
 #second-portfolio-item {
-	background-image: url('http://placekitten.com/g/900/900');
 	background-size: cover;
 	background-position: center center;
 	height: 100%;	
