--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -813,9 +813,10 @@ section {
       .portfolio .description {
         float: left;
         width: 25%; } }
-    @media (max-width: 992px) {
+    @media (max-width: 768px) {
       .portfolio .description {
-        padding-bottom: 3em; } }
+        padding-bottom: 3em;
+        text-align: center; } }
   .portfolio .screenshot {
     position: relative;
     min-height: 1px;
@@ -856,7 +857,10 @@ section {
   /* desired width */
   overflow: hidden;
   border-bottom-left-radius: .5em;
-  border-bottom-right-radius: .5em; }
+  border-bottom-right-radius: .5em;
+  -webkit-box-shadow: 0px 2px 12px -2px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 2px 12px -2px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 2px 12px -2px rgba(0, 0, 0, 0.75); }
 
 .box-169:before {
   content: "";
@@ -878,13 +882,11 @@ section {
   background-position: 50%; }
 
 #first-portfolio-item {
-  background-image: url("http://placekitten.com/g/900/600");
   background-size: cover;
   background-position: center center;
   height: 100%; }
 
 #second-portfolio-item {
-  background-image: url("http://placekitten.com/g/900/900");
   background-size: cover;
   background-position: center center;
   height: 100%; }
