--- a/assets/css/_my-typography.scss
+++ b/assets/css/_my-typography.scss
@@ -2,3 +2,10 @@
 	font-family: $font-family-sans-serif-alt;
 	font-weight: 700; 
 }
+
+.hidden {
+	display: none;
+}
+.visible {
+	display: inline-block;
+}
