--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -669,7 +669,10 @@ address {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
-  user-select: none; }
+  user-select: none;
+  -webkit-transition: all ease-in-out 0.15s;
+  -o-transition: all ease-in-out 0.15s;
+  transition: all ease-in-out 0.15s; }
   .btn:focus, .btn.focus, .btn:active:focus, .btn:active.focus, .btn.active:focus, .btn.active.focus {
     outline: thin dotted;
     outline: 5px auto -webkit-focus-ring-color;
@@ -678,7 +681,10 @@ address {
     color: #333333;
     text-decoration: none;
     background-color: #333333;
-    color: #fff; }
+    color: #fff;
+    -webkit-transition: all ease-in-out 0.15s;
+    -o-transition: all ease-in-out 0.15s;
+    transition: all ease-in-out 0.15s; }
   .btn:active, .btn.active {
     outline: 0;
     background-image: none;
@@ -920,5 +926,11 @@ footer {
 .text-alt, h1, h2, h3, h4, h5, h6 {
   font-family: "Exo 2", sans-serif;
   font-weight: 700; }
+
+.hidden {
+  display: none; }
+
+.visible {
+  display: inline-block; }
 
 /*# sourceMappingURL=style.css.map */
