--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -747,11 +747,9 @@ input[type="button"].btn-block {
   width: 100%; }
 
 @media (min-width: 768px) {
-  html, body, section, .row {
-    height: 100%; } }
-body > div {
-  height: 110%; }
-
+  html, body, .intro, .intro > .row {
+    height: 100%;
+    min-height: 700px; } }
 section {
   margin-right: auto;
   margin-left: auto;
@@ -922,6 +920,10 @@ footer {
     font-weight: bold; }
     footer a:hover {
       color: #bfbfbf; }
+  footer .btn:hover,
+  footer .btn:focus,
+  footer .btn:active {
+    border: 2px solid #fff; }
 
 .text-alt, h1, h2, h3, h4, h5, h6 {
   font-family: "Exo 2", sans-serif;
