--- a/assets/css/_my-style.scss
+++ b/assets/css/_my-style.scss
@@ -98,7 +98,7 @@ section {
 
 
 
-.box-169, .box-43 {
+.box-169, .box-43, .box-117 {
 	position: relative;
 	width: 100%;		/* desired width */
 	overflow: hidden;
@@ -118,6 +118,12 @@ section {
 	content: "";
 	display: block;
 	padding-top: 75%;
+}
+
+.box-117:before{
+	content: "";
+	display: block;
+	padding-top: 63.6363636364%;
 }
 
 .content{
@@ -165,7 +171,7 @@ section {
 } 
 
 #uzuovejos {
-	$uzuovejos-col: #1abc9c; 	
+	$uzuovejos-col: #B0BABD; 	
 	background: $uzuovejos-col;
 		.btn {
 			&:hover,
