--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -747,11 +747,9 @@ input[type="button"].btn-block {
   width: 100%; }
 
 @media (min-width: 768px) {
-  html, body, section, .row {
-    height: 100%; } }
-body > div {
-  height: 110%; }
-
+  html, body, .intro, .intro > .row {
+    height: 100%;
+    min-height: 700px; } }
 section {
   margin-right: auto;
   margin-left: auto;
@@ -857,7 +855,7 @@ section {
   .box-header .circle3 {
     left: 3.6em; }
 
-.box-169, .box-43 {
+.box-169, .box-43, .box-117 {
   position: relative;
   width: 100%;
   /* desired width */
@@ -877,6 +875,11 @@ section {
   content: "";
   display: block;
   padding-top: 75%; }
+
+.box-117:before {
+  content: "";
+  display: block;
+  padding-top: 63.6363636364%; }
 
 .content {
   position: absolute;
@@ -905,11 +908,11 @@ section {
     background-color: #e74c3c !important; }
 
 #uzuovejos {
-  background: #1abc9c; }
+  background: #B0BABD; }
   #uzuovejos .btn:hover, #uzuovejos .btn:focus, #uzuovejos .btn.focus {
-    color: #1abc9c; }
+    color: #B0BABD; }
   #uzuovejos .tiny {
-    background-color: #1abc9c !important; }
+    background-color: #B0BABD !important; }
 
 footer {
   padding-top: 4em;
@@ -922,6 +925,10 @@ footer {
     font-weight: bold; }
     footer a:hover {
       color: #bfbfbf; }
+  footer .btn:hover,
+  footer .btn:focus,
+  footer .btn:active {
+    border: 2px solid #fff; }
 
 .text-alt, h1, h2, h3, h4, h5, h6 {
   font-family: "Exo 2", sans-serif;
